--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/lupedealba/liri-node-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7"
   }
